crates/ripley-core/src/lockfile/snapshots/ripley_core__lockfile__pnpm__tests__parse_v6_snapshot.snap
---
source: crates/ripley-core/src/lockfile/pnpm.rs
expression: parsed
---
{
  "packages": [
    {
      "name": "@babel/core",
      "version": "7.24.5",
      "ecosystem": "npm"
    },
    {
      "name": "@babel/generator",
      "version": "7.24.5",
      "ecosystem": "npm"
    },
    {
      "name": "@tanstack/react-query",
      "version": "5.32.1",
      "ecosystem": "npm"
    },
    {
      "name": "accepts",
      "version": "1.3.8",
      "ecosystem": "npm"
    },
    {
      "name": "body-parser",
      "version": "1.20.1",
      "ecosystem": "npm"
    },
    {
      "name": "cookie",
      "version": "0.5.0",
      "ecosystem": "npm"
    },
    {
      "name": "express",
      "version": "4.18.2",
      "ecosystem": "npm"
    },
    {
      "name": "local-link",
      "version": "1.0.0",
      "ecosystem": "npm"
    },
    {
      "name": "lodash",
      "version": "4.17.21",
      "ecosystem": "npm"
    },
    {
      "name": "react",
      "version": "18.2.0",
      "ecosystem": "npm"
    },
    {
      "name": "react-dom",
      "version": "18.2.0",
      "ecosystem": "npm"
    },
    {
      "name": "scheduler",
      "version": "0.23.0",
      "ecosystem": "npm"
    },
    {
      "name": "semver",
      "version": "7.6.0",
      "ecosystem": "npm"
    },
    {
      "name": "sketchy-git-dep",
      "version": "1.0.0",
      "ecosystem": "npm"
    },
    {
      "name": "tslib",
      "version": "2.6.2",
      "ecosystem": "npm"
    },
    {
      "name": "typescript",
      "version": "5.4.5",
      "ecosystem": "npm"
    },
    {
      "name": "uuid",
      "version": "9.0.1",
      "ecosystem": "npm"
    },
    {
      "name": "zod",
      "version": "3.22.4",
      "ecosystem": "npm"
    }
  ],
  "risky_specs": [
    {
      "package": "local-link",
      "specifier": "../local-link",
      "reason": "resolves from local directory — not reproducible"
    },
    {
      "package": "sketchy-git-dep",
      "specifier": "git+https://github.com/example/sketchy.git#abc123",
      "reason": "resolves from git source — bypasses registry integrity"
    }
  ],
  "warnings": []
}
